--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,10 @@
-*
+*.lua
+*.txt
+ceshare/
+dlls/
+forms/
+images/export128x128.png
+images/import128x128.png
 
 # include
 !.gitignore
@@ -12,3 +18,4 @@
 !utils.lua
 !ce3.jpg
 !load-my-image.lua
+!CE_Plugin/
