添加Target模块，将大量函数和属性封装在里面，大量api变更

--- a/.gitignore
+++ b/.gitignore
@@ -10,8 +10,6 @@ images/import128x128.png
 !.gitignore
 
 !images
-!autorunMonoMethod.lua
-!getJmpNewBytes.lua
 !movbe.lua
 !README.md
 !timer.lua
@@ -19,4 +17,5 @@ images/import128x128.png
 !ce3.jpg
 !load-my-image.lua
 !CE_Plugin/
-!window.lua
+!Target.lua
+!onOpenProcess.lua
